# Metadata-Remover

./: README.md  SECURITY.md  __main__.py  commons.py  mrt.py  pyproject.toml  v9.py
Binaries/: Instruction.txt  MRT.zip.sig  Metadata Removal Toolv3.2.1.exe.sig  README.md
Binaries/Windows/: Instruction.txt  README.md  run.bat
C Source Code/: README.md
C Source code/: I.txt  README.md  run.c  run.c.sig
Python Source Code/Fix/: Readme.md  __init__.py  commons.py  emrt.py  v9.py
Python Source code/: __init__.py  __main__.py  final.py  mrt.py
Source Code/C Source code/: Install.md  Instructions.txt  Makefile  README.md  common.h  run.c  run.c.sig
Source Code/GUI_Qt6_Source_Code/: CMakeLists.txt  backgroundwidget.h  contentreader.h  downloadprogress.cpp  downloadprogress.h  downloadprogress.ui  main.cpp  mainwindow.cpp  mainwindow.ui
Source Code/GUI_Qt6_Source_Code/Metadata_Remover/: CMakeLists.txt  contentreader.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Source Code/Python Source Code/: Readme.md
Source Code/Python Source Code/MRT/: .gitignore  __init__.py  __main__.py  commons.py  emrt.py  mat2.py  mrt.py  runme.py  test_menu.py  v9.py
Source Code/Python Source Code/MRT/libmat2/: __init__.py  archive.py  audio.py  parser_factory.py  torrent.py  web.py
src/metadata-remover/libmat2/: __init__.py
src/metadata_remover/: __main__.py  commons.py  mat2.py  mrt.py
src/metadata_remover/libmat2/: abstract.py  audio.py  web.py
